--- a/src/client/admin/admin-login.html
+++ b/src/client/admin/admin-login.html
@@ -10,7 +10,7 @@
     <!--SCRIPTS--><!--SCRIPTS END-->
 </head>
 <body class="login-layout" ng-hide="_isLogin">
-<div class="container" id="login-block">
+<div class="container login-block">
     <div class="row">
         <div class="col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
             <h3>User Console</h3>
