update about page

--- a/src/client/modules/about/index.html
+++ b/src/client/modules/about/index.html
@@ -7,69 +7,69 @@
     <div>
         <img src="/img/marathon_md.jpg" class="img-responsive"/>
     </div>
-    <blockquote style="border-left: 5px solid red;">
+    <blockquote class='about-foreword'>
         <p>
             我活在世上，无非想要明白些道理，遇见些有趣的事。 ——王小波
         </p>
     </blockquote>
     <hr />
-    <h3>关于我</h3>
-    <blockquote style="border-left: 5px solid green;">
+    <h3>About Me</h3>
+    <blockquote class='about-me'>
         <p>
-            我是talent，26岁，目前是一名前端开发工程师。
+            I'm talent, 27 years old, and now as a F2E.
         </p>
         <p>
-            业余时间里，我喜欢研究前端前沿技术。
+            In my spare time, I like to research latest technologies in the front-end.
         </p>
         <p>
-            除此之外，也有许多其他的爱好，有些甚至常常让旁人感到惊讶。
+            In addition, I also have many other hobbies, which sometimes surprize others.
         </p>
         <p>
             ......
         </p>
         <p>
-            我喜欢跑步，热衷于参加各种大小马拉松比赛；
+            I like running, and I'm a marathoner.
         </p>
         <p>
-            我喜欢阅读，特别是日本推理小说；
+            I like reading, especially Japanese mystery novels.
         </p>
         <p>
-            我喜欢格斗，常常混迹于各类拳馆之中；
+            I like fighting, and I always appear in various boxing halls.
         </p>
         <p>
-            我喜欢日语，自学通过了N2考试，但现在依旧是哑巴；
+            I like Nihongo, and I passed JLPT N2 test through self study.
         </p>
         <p>
-            我喜欢双节棍，大学期间在社团担任了两年技术指导；
+            I like nunchakus, and I provided technical guidance to the nunchakus association in my university for almost two years.
         </p>
         <p>
-            我喜欢表演，参与过多部自制微电影的编剧与拍摄；
+            I like performance, and I involved writing and producing for several micro films.
         </p>
         <p>
             ......
         </p>
     </blockquote>
-    <h3>关于本站</h3>
-    <blockquote style="border-left: 5px solid #f0ad4e;">
+    <h3>About Site</h3>
+    <blockquote class='about-site'>
         <p>
-            本站域名注册于<a href="https://www.godaddy.com/" target="_blank">GoDaddy</a>，
-            网站托管于<a href="http://aws.amazon.com/" target="_blank">AWS</a>，
-            源码放置于<a href="https://github.com/just4fun/meaning" target="_blank">Github</a>。
+            The domain of this site is registered on <a href="https://www.godaddy.com/" target="_blank">GoDaddy</a>,
+            the site is hosted in <a href="http://aws.amazon.com/" target="_blank">AWS</a>,
+            and the source code is in <a href="https://github.com/just4fun/meaning" target="_blank">Github</a>.
         </p>
         <p>
-            如你所见，网站的整体UI比较简陋，因为建站主要目的是为了尝试前端业界的新技术。
+            As you see, the UI of this site is very simple, because the purpose of this site is just try the latest technologies.
         </p>
         <p>
-            后续会持续完善网站其余功能。
+            I will improve this site continuously later.
         </p>
         <p>
-            当然也会顺便记录自己工作、生活上一些有趣的事。
+            Of course, maybe there are also some notes about my life or my work.
         </p>
     </blockquote>
-    <h3>联系我</h3>
-    <blockquote class="social-media" style="border-left: 5px solid #5bc0de;">
+    <h3>Contact Me</h3>
+    <blockquote class="social-media">
         <p>
-            我非常喜欢SNS，以下是比较常用的一些：
+            I love sociality very much, below are some of my most commonly used SNSs:
         </p>
         <p>
             <a href="http://weibo.com/houritsunohikari" target="_blank"><i class="icon-weibo icon-3"></i></a>
@@ -77,14 +77,17 @@
             <a href="https://github.com/just4fun" target="_blank"><i class="icon-github icon-3"></i></a>
         </p>
         <p>
-            脸书跟推特很少发状态，但偶尔也会上去看看：
+            I also have FB and Twitter, and I use them occasionally:
         </p>
         <p>
             <a href="https://www.facebook.com/houritsunohikari" target="_blank"><i class="icon-facebook-sign icon-3"></i></a>
             <a href="https://twitter.com/houritsu_hikari" target="_blank"><i class="icon-twitter icon-3"></i></a>
         </p>
         <p>
-            你也可以直接给我发送电子邮件：
+            Moreover, I have a tech blog<a class='about-tech-blog' href="http://just4fun.github.io/hexo-blog" target="_blank">here</a>.
+        </p>
+        <p>
+            You can also contact me via email:
         </p>
         <p>
             <i>houritsunohikari at gmail.com</i>
