add animation to comments

--- a/src/client/modules/guestbook/index.html
+++ b/src/client/modules/guestbook/index.html
@@ -25,7 +25,7 @@
     </ul>
     <div class="col-md-offset-2 col-md-8">
         <ul class="comment-list">
-            <li ng-repeat="comment in comments">
+            <li ng-repeat="comment in comments" class="repeated-item">
                 <div class="pull-left comment-left-area">
                     <img ng-src="{{ comment.Email | gravatar }}" width="50px"/>
                     <p class="comment-author">
