[MEAN-001] fix the breaking changes

--- a/src/client/modules/guestbook/index.html
+++ b/src/client/modules/guestbook/index.html
@@ -7,7 +7,7 @@
 </style>
 
 <ul class="breadcrumb">
-    <li><a href="/">Home</a></li>
+    <li><a href="/#!/">Home</a></li>
     <li class="active">Guestbook</li>
 </ul>
 
