--- a/src/client/index.html
+++ b/src/client/index.html
@@ -46,7 +46,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">
+                    <a class="navbar-brand" href="/#!/">
                         <img ng-src="{{ MEANING.SiteLogo }}" width="40px"/>
                         <span ng-bind="MEANING.SiteName"></span>
                     </a>
