--- a/src/client/modules/404/index.html
+++ b/src/client/modules/404/index.html
@@ -11,7 +11,7 @@
 
 <div class="text-center">
     <img src="/img/404.jpg" class="img-responsive"/>
-    <a href="#!" class="btn btn-large btn-info">
+    <a href="/#!/" class="btn btn-large btn-info">
         <i class="icon-home icon-white"></i>
         Take Me Home
     </a>
