--- a/src/client/modules/about/index.html
+++ b/src/client/modules/about/index.html
@@ -1,5 +1,5 @@
 <ul class="breadcrumb">
-    <li><a href="/">Home</a></li>
+    <li><a href="/#!/">Home</a></li>
     <li class="active">About</li>
 </ul>
 
